Add installer check
Signed-off-by: Thien Nguyen <thiennguyen@nvidia.com>

--- a/realtime/lib/daemon/CMakeLists.txt
+++ b/realtime/lib/daemon/CMakeLists.txt
@@ -13,6 +13,7 @@
 # and includes the GPU dispatch kernel device code.
 
 if(CUDA_FOUND)
+  set(CMAKE_INSTALL_LIBDIR lib)
   set(CUDAQ_REALTIME_SOURCES
     dispatcher/cudaq_realtime_api.cpp
   )
