realtime: add host C API ringbuffer helpers and expand dispatcher unit tests
Add cudaq_host_ringbuffer_* helper functions to the public C API that
encapsulate the RPC wire format, slot signalling, and tx_flag polling so
callers no longer need to manipulate magic constants or raw flag arrays
directly. Also add cudaq_host_release_worker for returning a graph
worker to the idle pool after completion.

New helpers:
  cudaq_host_ringbuffer_write_rpc_request
  cudaq_host_ringbuffer_signal_slot
  cudaq_host_ringbuffer_poll_tx_flag
  cudaq_host_ringbuffer_slot_available
  cudaq_host_ringbuffer_clear_slot
  cudaq_host_release_worker

Expose cudaq_tx_status_t enum and CUDAQ_RPC_MAGIC_* / CUDAQ_RPC_HEADER_SIZE
constants so producers can work purely through the C API.

Add 5 new HostDispatcherLoopTest cases (multi-worker function_id routing,
worker recycling, backpressure when all workers busy, stats counter
accuracy, multi-slot round-robin) and migrate existing smoke and
round-trip tests to use the new C API helpers instead of raw pointer
manipulation.

Signed-off-by: Scott Thornton <wsttiger@gmail.com>

--- a/realtime/unittests/CMakeLists.txt
+++ b/realtime/unittests/CMakeLists.txt
@@ -86,6 +86,7 @@ if(CMAKE_CUDA_COMPILER)
     GTest::gtest_main
     CUDA::cudart
     cudaq-realtime
+    cudaq-realtime-host-dispatch
   )
   add_dependencies(CudaqRealtimeUnitTests test_host_dispatcher)
   gtest_discover_tests(test_host_dispatcher
