--- a/.github/workflows/build_package_sources.yml
+++ b/.github/workflows/build_package_sources.yml
@@ -30,15 +30,17 @@ on:
 name: Build package sources
 
 jobs:
-  diff-packages:
-    name: Diff apt/pip packages (CUDA ${{ matrix.cuda }})
+  diff-packages-cudaq:
+    name: Diff apt/pip packages ${{ matrix.release }} (CUDA ${{ matrix.cuda }})
     runs-on: ubuntu-latest
     outputs:
       base_image: ${{ steps.images.outputs.base_image }}
+      target_image: ${{ steps.images.outputs.target_image }}
     strategy:
       fail-fast: false
       matrix:
         cuda: ['12.6', '13.0']
+        release: ['cudaq', 'cudaqx']
     permissions:
       contents: read
 
@@ -51,9 +53,16 @@ jobs:
       - name: Set image names
         id: images
         run: |
-          echo "base_image=nvcr.io/nvidia/cuda:${{ matrix.cuda }}.0-runtime-ubuntu24.04" >> $GITHUB_OUTPUT
           cuda_major=$(echo "${{ matrix.cuda }}" | cut -d. -f1)
-          echo "target_image=nvcr.io/nvidia/nightly/cuda-quantum:cu${cuda_major}-latest" >> $GITHUB_OUTPUT
+          if [ "${{ matrix.release }}" = "cudaq" ]; then
+            echo "base_image=nvcr.io/nvidia/cuda:${{ matrix.cuda }}.0-runtime-ubuntu24.04" >> $GITHUB_OUTPUT
+            echo "target_image=nvcr.io/nvidia/nightly/cuda-quantum:cu${cuda_major}-latest" >> $GITHUB_OUTPUT
+          else
+            # cudaqx: devcontainer base, cudaqx target
+            cu_tag=$(echo "${{ matrix.cuda }}" | tr -d .)
+            echo "base_image=ghcr.io/nvidia/cuda-quantum-devcontainer:amd64-cu${cu_tag}-gcc11-main" >> $GITHUB_OUTPUT
+            echo "target_image=ghcr.io/nvidia/cudaqx:amd64-${cuda_major}" >> $GITHUB_OUTPUT
+          fi
 
       - name: Log in to container registries
         run: |
@@ -76,18 +85,19 @@ jobs:
       - name: Upload package lists
         uses: actions/upload-artifact@v4
         with:
-          name: package-source-diff-cu${{ matrix.cuda }}.zip
+          name: package-source-diff-cu${{ matrix.cuda }}-${{ matrix.release }}.zip
           path: package-source-diff/
           retention-days: 1
 
   build-source-image:
     name: Build source image (CUDA ${{ matrix.cuda }})
-    needs: diff-packages
+    needs: diff-packages-cudaq
     runs-on: linux-amd64-cpu32
     strategy:
       fail-fast: false
       matrix:
-        cuda: ['12.6', '13.0']
+        cuda: ['12.6']
+        release: ['cudaq']
     permissions:
       contents: read
       packages: write
@@ -102,19 +112,28 @@ jobs:
           persist-credentials: false
           submodules: recursive
 
-      - name: Download package lists
+      - name: Download package lists (cudaq)
         uses: actions/download-artifact@v4
         with:
-          name: package-source-diff-cu${{ matrix.cuda }}.zip
+          name: package-source-diff-cu${{ matrix.cuda }}-cudaq.zip
+          path: package-source-diff-cudaq
+
+      - name: Download package lists (cudaqx)
+        uses: actions/download-artifact@v4
+        with:
+          name: package-source-diff-cu${{ matrix.cuda }}-cudaqx.zip
+          path: package-source-diff-cudaqx
 
       - name: Restore package-source-diff directory layout
         run: |
-          # Ensure package-source-diff/ exists with list files for Dockerfile COPY
-          if [ ! -f package-source-diff/apt_packages.txt ]; then
-            mkdir -p package-source-diff
-            mv apt_packages.txt pip_packages.txt package-source-diff/ 2>/dev/null || true
-          fi
-          touch package-source-diff/apt_packages.txt package-source-diff/pip_packages.txt
+          mkdir -p package-source-diff
+          for variant in cudaq cudaqx; do
+            dir="package-source-diff-${variant}"
+            apt_src="$dir/apt_packages.txt"; [ -f "$dir/package-source-diff/apt_packages.txt" ] && apt_src="$dir/package-source-diff/apt_packages.txt"
+            pip_src="$dir/pip_packages.txt"; [ -f "$dir/package-source-diff/pip_packages.txt" ] && pip_src="$dir/package-source-diff/pip_packages.txt"
+            [ -f "$apt_src" ] && cp "$apt_src" "package-source-diff/apt_packages_${variant}.txt" || touch "package-source-diff/apt_packages_${variant}.txt"
+            [ -f "$pip_src" ] && cp "$pip_src" "package-source-diff/pip_packages_${variant}.txt" || touch "package-source-diff/pip_packages_${variant}.txt"
+          done
           ls -la package-source-diff/
 
       - name: Generate tpls lock file
@@ -134,7 +153,7 @@ jobs:
           context: .
           file: docker/build/package_sources.Dockerfile
           build-args: |
-            base_image=${{ needs.diff-packages.outputs.base_image }}
+            base_image=${{ needs.diff-packages-cudaq.outputs.base_image }}
           load: true
           tags: package-sources:latest
           outputs: type=docker,dest=/tmp/package-sources.tar
@@ -177,7 +196,7 @@ jobs:
 
       - name: Summary
         run: |
-          base_image="${{ needs.diff-packages.outputs.base_image }}"
+          base_image="${{ needs.diff-packages-cudaq.outputs.base_image }}"
           cuda_major=$(echo "${{ matrix.cuda }}" | cut -d. -f1); target_image="nvcr.io/nvidia/nightly/cuda-quantum:cu${cuda_major}-latest"
           echo "## Package source diff (CUDA ${{ matrix.cuda }})" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
