fix devcontainer tag
Signed-off-by: Mitchell <mitch_dz@hotmail.com>

--- a/.github/workflows/build_package_sources.yml
+++ b/.github/workflows/build_package_sources.yml
@@ -60,7 +60,7 @@ jobs:
           else
             # cudaqx: devcontainer base, cudaqx target
             cu_tag=$(echo "${{ matrix.cuda }}" | tr -d .)
-            echo "base_image=ghcr.io/nvidia/cuda-quantum-devcontainer:amd64-cu${cu_tag}-gcc11-main" >> $GITHUB_OUTPUT
+            echo "base_image=ghcr.io/nvidia/cuda-quantum-devcontainer:amd64-cu${{ matrix.cuda }}-gcc11-main" >> $GITHUB_OUTPUT
             echo "target_image=ghcr.io/nvidia/cudaqx:amd64-${cuda_major}" >> $GITHUB_OUTPUT
           fi
 
