--- a/.github/workflows/build_package_sources.yml
+++ b/.github/workflows/build_package_sources.yml
@@ -76,7 +76,7 @@ jobs:
             # cudaqx: devcontainer base, cudaqx target
             cu_tag=$(echo "${{ matrix.cuda }}" | tr -d .)
             echo "base_image=ghcr.io/nvidia/cuda-quantum-devcontainer:amd64-cu${{ matrix.cuda }}-gcc11-main" >> $GITHUB_OUTPUT
-            echo "target_image=ghcr.io/nvidia/cudaqx:amd64-${cuda_major}" >> $GITHUB_OUTPUT
+            echo "target_image=ghcr.io/nvidia/cudaqx:cu${cuda_major}-latest" >> $GITHUB_OUTPUT
           fi
 
       - name: Log in to container registries
