--- a/.github/workflows/build_package_sources.yml
+++ b/.github/workflows/build_package_sources.yml
@@ -248,6 +248,10 @@ jobs:
           persist-credentials: false
           submodules: recursive
 
+      - name: Set base image
+        id: base-image
+        run: echo "base_image=nvcr.io/nvidia/cuda:${{ matrix.cuda }}.0-runtime-ubuntu24.04" >> $GITHUB_OUTPUT
+
       - name: Download package lists (cudaq)
         uses: actions/download-artifact@v4
         with:
@@ -301,7 +305,7 @@ jobs:
           context: .
           file: docker/build/package_sources.Dockerfile
           build-args: |
-            base_image=nvcr.io/nvidia/cuda:${{ matrix.cuda }}.0-runtime-ubuntu24.04
+            base_image=${{ steps.base-image.outputs.base_image }}
           load: true
           tags: package-sources:latest
           outputs: type=docker,dest=/tmp/package-sources.tar
@@ -344,16 +348,9 @@ jobs:
 
       - name: Summary
         run: |
-          base_image="${{ needs.diff-packages-cudaq.outputs.base_image }}"
-          cuda_major=$(echo "${{ matrix.cuda }}" | cut -d. -f1); target_image="nvcr.io/nvidia/nightly/cuda-quantum:cu${cuda_major}-latest"
+          base_image="${{ steps.base-image.outputs.base_image }}"
           echo "## Package source diff (CUDA ${{ matrix.cuda }})" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Base image:** \`${base_image}\`" >> $GITHUB_STEP_SUMMARY
-          echo "- **Target image:** \`${target_image}\`" >> $GITHUB_STEP_SUMMARY
-          echo "- **Apt packages added:** $(wc -l < package-source-diff/apt_packages.txt 2>/dev/null || echo 0)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Pip packages added:** $(wc -l < package-source-diff/pip_packages.txt 2>/dev/null || echo 0)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Built image \`package-sources:latest\` (ubuntu:24.04 with sources under \`/sources/apt\`, \`/sources/pip\`, and \`/sources/tpls\`)." >> $GITHUB_STEP_SUMMARY
-          if [ -n "${{ steps.push.outputs.image_tag }}" ]; then
-            echo "- **Pushed:** \`${{ steps.push.outputs.image_tag }}\`" >> $GITHUB_STEP_SUMMARY
-          fi
+          echo "Built image ${{ steps.push.outputs.image_tag }}" >> $GITHUB_STEP_SUMMARY
