[python] Unify specialize and launch in ModuleLauncher
Signed-off-by: Luca Mondada <luca@mondada.net>

--- a/runtime/common/CMakeLists.txt
+++ b/runtime/common/CMakeLists.txt
@@ -26,6 +26,7 @@ set(COMMON_RUNTIME_SRC
   SampleResult.cpp
   ServerHelper.cpp
   Trace.cpp
+  CompiledKernel.cpp
 )
 
 # Create the cudaq-common library
